--- a/Day#12_Decision_Trees_Assignment.ipynb
+++ b/Day#12_Decision_Trees_Assignment.ipynb
@@ -37,12 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "13f00a6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# To ignore warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn import metrics\n",
+    "from sklearn import tree\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import export_text\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay"
    ]
   },
   {
@@ -55,13 +69,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f7c3f583",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Num_posts</th>\n",
+       "      <th>Num_following</th>\n",
+       "      <th>Num_followers</th>\n",
+       "      <th>Biography_length</th>\n",
+       "      <th>Picture_availability</th>\n",
+       "      <th>Link_availability</th>\n",
+       "      <th>Average_caption_length</th>\n",
+       "      <th>Caption_zero</th>\n",
+       "      <th>Non_image_percentage</th>\n",
+       "      <th>Engagement_rate_like</th>\n",
+       "      <th>Engagement_rate_comment</th>\n",
+       "      <th>Location_tag_percentage</th>\n",
+       "      <th>Average_hashtag_count</th>\n",
+       "      <th>Promotional_keywords</th>\n",
+       "      <th>Followers_keywords</th>\n",
+       "      <th>Cosine_similarity</th>\n",
+       "      <th>Post_interval</th>\n",
+       "      <th>real_fake</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>44</td>\n",
+       "      <td>48</td>\n",
+       "      <td>325</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.094985</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>66</td>\n",
+       "      <td>321</td>\n",
+       "      <td>150</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>213</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.39</td>\n",
+       "      <td>1.97</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.206826</td>\n",
+       "      <td>230.412857</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>970</td>\n",
+       "      <td>308</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>436</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.10</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>0.572174</td>\n",
+       "      <td>43.569939</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>70</td>\n",
+       "      <td>86</td>\n",
+       "      <td>360</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.859799</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>285</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.29</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.300494</td>\n",
+       "      <td>0.126019</td>\n",
+       "      <td>fake</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Num_posts  Num_following  Num_followers  Biography_length  \\\n",
+       "0          44             48            325                33   \n",
+       "1          10             66            321               150   \n",
+       "2          33            970            308               101   \n",
+       "3          70             86            360                14   \n",
+       "4           3             21            285                73   \n",
+       "\n",
+       "   Picture_availability  Link_availability  Average_caption_length  \\\n",
+       "0                     1                  0                      12   \n",
+       "1                     1                  0                     213   \n",
+       "2                     1                  1                     436   \n",
+       "3                     1                  0                       0   \n",
+       "4                     1                  0                      93   \n",
+       "\n",
+       "   Caption_zero  Non_image_percentage  Engagement_rate_like  \\\n",
+       "0           0.0                   0.0                  0.00   \n",
+       "1           0.0                   1.0                 14.39   \n",
+       "2           0.0                   1.0                 10.10   \n",
+       "3           1.0                   0.0                  0.78   \n",
+       "4           0.0                   0.0                 14.29   \n",
+       "\n",
+       "   Engagement_rate_comment  Location_tag_percentage  Average_hashtag_count  \\\n",
+       "0                     0.00                    0.000                    0.0   \n",
+       "1                     1.97                    0.000                    1.5   \n",
+       "2                     0.30                    0.000                    2.5   \n",
+       "3                     0.06                    0.000                    0.0   \n",
+       "4                     0.00                    0.667                    0.0   \n",
+       "\n",
+       "   Promotional_keywords  Followers_keywords  Cosine_similarity  Post_interval  \\\n",
+       "0                   0.0               0.000           0.111111       0.094985   \n",
+       "1                   0.0               0.000           0.206826     230.412857   \n",
+       "2                   0.0               0.056           0.572174      43.569939   \n",
+       "3                   0.0               0.000           1.000000       5.859799   \n",
+       "4                   0.0               0.000           0.300494       0.126019   \n",
+       "\n",
+       "  real_fake  \n",
+       "0      fake  \n",
+       "1      fake  \n",
+       "2      fake  \n",
+       "3      fake  \n",
+       "4      fake  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "df = pd.read_csv('instagram_users.csv')\n",
+    "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "443b2006",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([' Num_posts', 'Num_following', 'Num_followers', 'Biography_length',\n",
+       "       'Picture_availability', 'Link_availability', 'Average_caption_length',\n",
+       "       'Caption_zero', 'Non_image_percentage', 'Engagement_rate_like',\n",
+       "       'Engagement_rate_comment', 'Location_tag_percentage',\n",
+       "       'Average_hashtag_count', 'Promotional_keywords', 'Followers_keywords',\n",
+       "       'Cosine_similarity', 'Post_interval', 'real_fake'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8bc26c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,12 +323,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "9e94233d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "X = df.loc[:, df.columns!='real_fake']\n",
+    "y = df['real_fake']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d4052690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=111)\n"
    ]
   },
   {
@@ -102,12 +363,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0e8f4d29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "94b056a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['fake', 'real', 'fake', ..., 'real', 'fake', 'fake'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict = clf.predict(X_test)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "06090edc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['fake', 'real', 'fake', ..., 'real', 'fake', 'fake'], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre = predict"
    ]
   },
   {
@@ -155,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +473,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "149b89a38907e440de612d7f39cfdd2a43d2a636577520bfbbfc3d7cef0bee1f"
+   }
   }
  },
  "nbformat": 4,
