--- a/Day#12_Decision_Trees_Assignment.ipynb
+++ b/Day#12_Decision_Trees_Assignment.ipynb
@@ -42,7 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -60,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "df = pd.read_csv(\"instagram_users.csv\")"
    ]
   },
   {
@@ -78,7 +81,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4513ec87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(columns = 'real_fake',axis = 1)\n",
+    "y = df['real_fake']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3acfc37d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=23)"
    ]
   },
   {
@@ -101,13 +125,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7c1c73a",
+   "metadata": {},
+   "source": [
+    "### DecisionTreeClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0e8f4d29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "clf = DecisionTreeClassifier()\n",
+    "clf.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5bbbe6c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y_pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cbf6b7f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score 0.8489675210127633\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix, accuracy_score\n",
+    "print('accuracy_score',accuracy_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9c172ece",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix [[8191 1411]\n",
+      " [1500 8172]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('confusion_matrix',confusion_matrix(y_test,y_pred))"
    ]
   },
   {
@@ -122,13 +215,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9b64e20",
+   "metadata": {},
+   "source": [
+    "### RandomForestClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b37a0953",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rfc = RandomForestClassifier(n_estimators=100) #n_estimators: The number of trees in the forest.\n",
+    "rfc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "043e093b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y_pred = rfc.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bc5c77cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score 0.8960257341496316\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('accuracy_score',accuracy_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4b0b7216",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix [[8039 1563]\n",
+      " [ 441 9231]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('confusion_matrix',confusion_matrix(y_test,y_pred))"
    ]
   },
   {
@@ -143,13 +304,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4759bed3",
+   "metadata": {},
+   "source": [
+    "### KNeighborsClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
+   "id": "f01f256b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "f73c0c18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y_pred = knn.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7d8f9f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7350316488533776\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d54b499a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confusion_matrix [[6824 2778]\n",
+      " [2329 7343]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('confusion_matrix',confusion_matrix(y_test,y_pred))"
    ]
   }
  ],
@@ -169,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
